test: added tests for database models

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,8 +7,8 @@ DEBUG=True
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=movie_explorer
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_USER=movie_user
+DB_PASSWORD=movie_user
 
 # CORS Configuration
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
