--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
+  # Database
   db:
     image: postgres:14-alpine
     container_name: movie-explorer-db
@@ -43,7 +43,7 @@ services:
       SECRET_KEY: ${SECRET_KEY:-change-this-secret-key-in-production}
       CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost:3000,http://localhost:5173,http://localhost}
     ports:
-      - "${BACKEND_PORT:-5000}:5000"
+      - "${BACKEND_PORT:-5001}:5001"
     volumes:
       - ./backend:/app
       - backend_cache:/app/__pycache__
@@ -51,7 +51,7 @@ services:
       - movie-explorer-network
     command: python app.py
     healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5000/health')"]
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5001/health')"]
       interval: 30s
       timeout: 10s
       retries: 3
