--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,6 +18,8 @@ server {
     # Handle React Router
     location / {
         try_files $uri $uri/ /index.html;
+        # Prevent caching of index.html
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
     # API proxy (if needed)
@@ -33,8 +35,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # Cache images and fonts (long-lived)
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Cache CSS and JS with hash-based filenames (moderate caching)
+    # The hash in filename (e.g., index-BL3py_J3.js) ensures cache busting
+    location ~* \.(css|js)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
